force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Api_Key__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Api_Key__c</fullName>
    <description>The field is optional. If populated this value will be included in payloads that are sent to external system</description>
    <label>Api Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>