force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Is_Archived__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is required if the question has been archived. It automatically populates and indicates if the question has been archived.</description>
    <label>Is Archived</label>
    <type>Checkbox</type>
</CustomField>