force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. The admin manually populates this field. It indicates if the question is required.</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>