force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Label__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Label__c</fullName>
    <description>This field is required. The admin manually populates this field. It is the label displayed to the user while viewing a question.</description>
    <label>Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>