force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Maximum__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Maximum__c</fullName>
    <description>Users populate this field to insert the maximum value for Number, Currency, and Percentage fields in Questionnaires. By default, it is blank.</description>
    <inlineHelpText>Populate this field with the minimum value for Number, Currency, and Percentage fields in Questionnaires.</inlineHelpText>
    <label>Maximum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>