force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Order__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Order__c</fullName>
    <description>This field is required. The admin manually populates this field. It is the order of the question in relation to a questionnaire.</description>
    <label>Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>