force-app/main/default/objects/nFORCE__Question__c/fields/nFORCE__Screen_Section__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Screen_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This user populated lookup field is used to denote the screen section that will be presented in the questionnaire.</description>
    <inlineHelpText>Populate this field with the screen section that should be presented in the questionnaire.</inlineHelpText>
    <label>Screen Section</label>
    <referenceTo>nFORCE__Screen_Section__c</referenceTo>
    <relationshipLabel>Screen Section</relationshipLabel>
    <relationshipName>Screen_Section</relationshipName>
    <type>Lookup</type>
</CustomField>