force-app/main/default/objects/nFORCE__Question__c/listViews/nFORCE__All.listView-meta.xml
<ListView>
    <fullName>nFORCE__All</fullName>
    <columns>NAME</columns>
    <columns>nFORCE__Label__c</columns>
    <columns>nFORCE__Is_Archived__c</columns>
    <columns>nFORCE__Form_Type__c</columns>
    <columns>nFORCE__Group__c</columns>
    <columns>nFORCE__Is_Required__c</columns>
    <columns>nFORCE__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>